# onlineShop

./: Cargo.toml  docker-compose.yml
migration/src/: lib.rs  m20220101_000001_create_user_table.rs
src/: main.rs
src/config/: env_config.rs  mod.rs
src/db/: config.rs
src/entities/: mod.rs  product.rs  user.rs
src/errors/: api_error.rs  mod.rs
src/handlers/: mod.rs  product_handler.rs  user_handler.rs
src/middlewares/: auth.rs  error.rs
src/migrator/: m20220101_000001_create_user_table.rs  m20220101_000002_create_product_table.rs  mod.rs
src/models/: product.rs  user.rs
src/routes/: mod.rs  product_routes.rs  user_route.rs
