[package]
name = "onlineShop"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.28"
sea-orm = { version = "1.1.2" }
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7.12" }
actix-web = "4"
serde = "1.0.215"
serde_derive = "1.0.215"
dotenv = "0.15"
bcrypt = "0.16.0"
jsonwebtoken = "9.3.0"
[dependencies.sea-orm-migration]
version = "1.1.0"
features = [
  # Enable at least one `ASYNC_RUNTIME` and `DATABASE_DRIVER` feature if you want to run migration via CLI.
  # View the list of supported features at https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime.
  # e.g.
  "runtime-tokio-rustls",  # `ASYNC_RUNTIME` feature
  "sqlx-postgres",         # `DATABASE_DRIVER` feature
]